full CRUD operations
I have implemented all CRUD operations with the API. All have been tested using post man and work.
